# ChangeLog for app-admin/eselect-emacs
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-emacs/ChangeLog,v 1.72 2009/05/02 13:08:21 ulm Exp $

*eselect-emacs-1.9 (02 May 2009)

  02 May 2009; Ulrich Mueller <ulm@gentoo.org> +eselect-emacs-1.9.ebuild:
  Version bump.

  12 Mar 2009; Ulrich Mueller <ulm@gentoo.org> -eselect-emacs-1.5-r1.ebuild:
  Remove old.

  12 Mar 2009; Brent Baude <ranger@gentoo.org> eselect-emacs-1.8.ebuild:
  Marking eselect-emacs-1.8 ppc64 for bug 256113

  19 Feb 2009; nixnut <nixnut@gentoo.org> eselect-emacs-1.8.ebuild:
  ppc stable #256113

  06 Feb 2009; Jeroen Roovers <jer@gentoo.org> eselect-emacs-1.8.ebuild:
  Stable for HPPA (bug #256113).

  27 Jan 2009; Raúl Porcel <armin76@gentoo.org> eselect-emacs-1.8.ebuild:
  alpha/arm/ia64/s390/sh stable wrt #256113

  25 Jan 2009; Markus Meier <maekke@gentoo.org> eselect-emacs-1.8.ebuild:
  amd64/x86 stable, bug #256113

  23 Jan 2009; Ferris McCormick <fmccor@gentoo.org>
  eselect-emacs-1.8.ebuild:
  Sparc stable, Bug #256113.

  23 Jan 2009; Ulrich Mueller <ulm@gentoo.org> -eselect-emacs-1.7.ebuild:
  Clean up.

  22 Dec 2008; Christian Faulhammer <fauli@gentoo.org>
  eselect-emacs-1.8.ebuild:
  remove unnecessary die messages and clarify DESCRIPTION a bit

*eselect-emacs-1.8 (21 Dec 2008)

  21 Dec 2008; Ulrich Mueller <ulm@gentoo.org> +eselect-emacs-1.8.ebuild:
  Version bump.

*eselect-emacs-1.7 (19 Dec 2008)

  19 Dec 2008; Ulrich Mueller <ulm@gentoo.org> -eselect-emacs-1.6.ebuild,
  +eselect-emacs-1.7.ebuild:
  Version bump. Remove intermediate version.

*eselect-emacs-1.6 (12 Dec 2008)

  12 Dec 2008; Ulrich Mueller <ulm@gentoo.org> +eselect-emacs-1.6.ebuild:
  Version bump: ebrowse added to list of man pages.

  25 Oct 2008; Ulrich Mueller <ulm@gentoo.org> -files/emacs-updater,
  -eselect-emacs-1.3-r2.ebuild, -eselect-emacs-1.5.ebuild:
  Remove old.
